# snap

./: .gitignore  Benchmark  Benchmark.cpp  BenchmarkAshton.cpp  CMakeLists.txt  CREDITS.txt  Credits.txt  Engine.cpp  LICENSE  License.txt  Makefile  Makefile.am  Makefile.config  Predicate.h  PredicateTest.cpp  README  README.md  README.txt  RELEASE.txt  ReadMe.txt  Release.txt  SetOperationsTest.cpp  Table.cpp  Table.h  TableTest  TableTest.cpp  TableTest1  TableTest1.cpp  autoclean.sh  autogen.sh  build-cmake  build-cmake-test-tutorials  configure.ac  libsnap.pc.in  readme.txt
cmake/: CMakeLists.txt  Makefile  build-cmake  windows_compat.cpp  windows_compat.h
examples/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.exmain  README  ReadMe.txt  SnapExamples-VS08.sln  SnapExamples-VS10.sln  SnapExamples-VS19.sln  SnapExamples.sln
examples/agmfit/: CMakeLists.txt  Makefile  Makefile.ex  ReadMe.txt  agmfit.vcxproj  agmfit.vcxproj.filters  agmfitmain.cpp  football.edgelist  football.labels  stdafx.h
examples/agmgen/: CMakeLists.txt  Makefile  Makefile.ex  ReadMe.txt  agmgen.cpp  agmgen.vcproj  agmgen.vcxproj  community_affiliations.txt
examples/bfs-dev/: .gitignore  ReadMe.txt  analysis.txt  analysis_1.txt  analysis_2.txt  analysis_twitter.txt  avg_degrees.cpp  bfs  bfs-bottomup.h  bfs-dev.h  bfs-hybrid-test.h  bfs-hybrid.h  bfs-vector.h  bfs.cpp  childCounts.txt  getScc  getScc.cpp  livejournal  livejournal.cpp  livejournal.gcno  livejournal_20.txt  map_results.txt  plot.py  test  test.cpp  test.gcno  test_gprof.sh  testgraph.cpp  twitter  twitter.cpp  twitter.txt
examples/bigclam/: CMakeLists.txt  Makefile.ex  ReadMe.txt  bigclam.cpp  bigclam.vcxproj
examples/cascadegen/: CMakeLists.txt  Makefile.ex  ReadMe.txt  cascadegen.cpp  cascadegen.vcxproj
examples/cascades/: CMakeLists.txt  Makefile  Makefile.ex  ReadMe.txt  cascades.cpp  cascades.vcproj  cascades.vcxproj  stdafx.h
examples/centrality/: CMakeLists.txt  Makefile  Makefile.ex  ReadMe.txt  centrality.cpp  centrality.vcproj  centrality.vcxproj
examples/cesna/: 1912.edges  1912.nodefeat  1912.nodefeatnames  CMakeLists.txt  Makefile.ex  ReadMe.txt  cesna.cpp  cesna.vcxproj  cesna.vcxproj.filters
examples/circles/: CMakeLists.txt  Makefile.ex  circles.cpp  circles.h  circles.vcxproj  fb1.circles  fb1.edges  fb1.feat  fb1.features  stdafx.h
examples/cliques/: CMakeLists.txt  Makefile  Makefile.ex  ReadMe.txt  cliques.vcproj  cliques.vcxproj  cliquesmain.cpp
examples/coda/: CMakeLists.txt  Makefile.ex  ReadMe.txt  coda.cpp  coda.vcxproj  coda.vcxproj.filters  stdafx.cpp
examples/community/: CMakeLists.txt  Makefile  Makefile.ex  ReadMe.txt  community.cpp  community.vcproj  community.vcxproj  stdafx.h
examples/concomp/: CMakeLists.txt  Makefile  (+4 more)
glib-adv/: Makefile  Makefile.am  aest.h  amazon.h  bde.h  bowfl.h  bowmd.h  cache.h  casino.cpp  cgi.h  cordis.cpp  crawler.cpp  crawler.h  cyc.cpp  dm.cpp  dm.h  dmine.cpp  dmoz.cpp  dzs.cpp  email.h  gix.cpp  gix.h  google.cpp  googlex.h  graph.cpp  graph.h  guid.cpp  guid.h  lsionto.cpp  medline.cpp  mkcca.cpp  mkcca.h  mte.h  nntp.h  odbc.h  ontolight.cpp  pest.cpp  pww.cpp  skygrid.h  sqlite3.c  (+17 more)
glib-core/: CMakeLists.txt  Makefile.am  README  base.cpp  base.h  bd.cpp  bd.h  bits.h  blobbs.cpp  blobbs.h  book.cpp  bowbs.h  bowclust.cpp  bowclust.h  bowlearn.cpp  btalarms.cpp  ccar.h  cfyres.cpp  console.cpp  console.h  crawler.h  dmhd.cpp  ds.h  dt.cpp  dt.h  dzs.h  env.cpp  env.h  exp.h  exset.cpp  fl.cpp  fl.h  geoip.cpp  gksvml.h  gnuplot.cpp  gnuplot.h  googlex.cpp  graph.h  hash.cpp  hash.h  (+66 more)
snap-adv/: CMakeLists.txt  Makefile.am  agm.cpp  agm.h  agmattr.cpp  agmattr.h  agmdirected.cpp  agmdirected.h  agmfast.cpp  agmfast.h  agmfit.cpp  agmfit.h  biasedrandomwalk.cpp  biasedrandomwalk.h  cascdynetinf.cpp  cascdynetinf.h  cascnetinf.cpp  cascnetinf.h  circles.h  cliques.cpp  enumerate_subgraphs.h  graphcounter.cpp  hysgen.cpp  hysgen.h  imdbnet.h  kronecker.h  linkpred.cpp  localmotifcluster.cpp  localmotifcluster.h  mag.cpp  mag.h  motifcluster.cpp  motifcluster.h  n2v.cpp  n2v.h  ncp.cpp  ncp.h  node2vec.cpp  randomwalk.cpp  randomwalk.h  (+19 more)
snap-core/: CMakeLists.txt  Makefile  Makefile.am  Snap.cpp  Snap.h  agm.cpp  agm.h  alg.h  anf.cpp  anf.h  arxiv.h  attr.cpp  attr.h  bfsdfs.h  bignet.h  casc.cpp  casc.h  cascTime.cpp  centr.cpp  centr.h  cliques.cpp  cliques.h  cmty.cpp  cmty.h  cncom.cpp  cncom.h  conv.cpp  conv.h  coreper.cpp  coreper.h  dblp.cpp  ff.cpp  ff.h  flow.cpp  flow.h  gbase.cpp  gbase.h  ggen.cpp  ggen.h  ghash.cpp  (+68 more)
snap-exp/: Makefile.am  Makefile.exmain  alternativetable.cpp  alternativetable.h  centr-exp.cpp  centr-exp.h  efficiency.cpp  efficiency.h  graphmp-exp.h  imdbnet.cpp  imdbnet.h  lsh.cpp  lsh.h  memes.cpp  mmgraph-exp.cpp  mmgraph-exp.h  motifcluster.cpp  motifcluster.h  signnet.cpp  wikinet.cpp  wikinet.h
test/: CMakeLists.txt  Makefile  test-TAttr.cpp  test-TCrossNet.cpp  test-TDirNet.cpp  test-THash.cpp  test-THashSet.cpp  test-TMMNet.cpp  test-TModeNet.cpp  test-TNEAGraph.cpp  test-TNEANet.cpp  test-TNEGraph.cpp  test-TNGraph.cpp  test-TNodeEDatNet.cpp  test-TNodeEdgeNet.cpp  test-TNodeNet.cpp  test-TSparseAttr.cpp  test-TStrPool.cpp  test-TSysTm.cpp  test-TTable.cpp  test-TUNGraph.cpp  test-TUndirNet.cpp  test-TVec.cpp  test-alg.cpp  test-bfsdfs.cpp  test-cncom.cpp  test-flow.cpp  test-ggen.cpp  test-gio.cpp  test-gviz.cpp  test-helper.cpp  test-helper.h  test-multimodal.cpp  test-priority-queue.cpp  test-randwalk.cpp  test-shmio.cpp  test-sim.cpp  test-subgraph.cpp  test-triad.cpp
tutorials/: CMakeLists.txt  Makefile  demo-TAttr.cpp  demo-TDirNet.cpp  demo-THash.cpp  demo-TNEAGraph-2.cpp  demo-TNEAGraph.cpp  demo-TNEANet.cpp  demo-TNEGraph.cpp  demo-TNGraph.cpp  demo-TNodeEDatNet.cpp  demo-TNodeEdgeNet.cpp  demo-TNodeNet.cpp  demo-TSsParser.cpp  demo-TUNGraph.cpp  demo-TUndirNet.cpp  demo-alg.cpp  demo-bfsdfs.cpp  demo-cncom.cpp  demo-cncom1.cpp  demo-ggen.cpp  demo-gio.cpp  demo-gviz.cpp  demo-hashvec-benchmark.cpp  demo-multimodal.cpp  demo-subgraph.cpp  demo-topology-benchmark.cpp  demo-triad.cpp
(+1326 files in other folders)
