#add examples
#CMakeLists.text files need to be created
add_subdirectory(agmgen)
add_subdirectory(agmfit)
add_subdirectory(bigclam)
add_subdirectory(cascades)
add_subdirectory(centrality)
add_subdirectory(cesna)
add_subdirectory(circles)
add_subdirectory(cliques)
add_subdirectory(coda)
add_subdirectory(community)
add_subdirectory(concomp)
add_subdirectory(flows)
add_subdirectory(forestfire)
add_subdirectory(graphgen)
add_subdirectory(graphhash)
add_subdirectory(infopath)
add_subdirectory(kcores)
add_subdirectory(kronem)
add_subdirectory(krongen)
add_subdirectory(kronfit)
add_subdirectory(magfit)
add_subdirectory(maggen)
add_subdirectory(mkdatasets)
add_subdirectory(motifs)
add_subdirectory(ncpplot)
add_subdirectory(netevol)
add_subdirectory(netinf)
add_subdirectory(netstat)
add_subdirectory(testgraph)
